Fix generating of clan snapshot for clans bigger than 100 players Fix parse exceptions that come up when trying to generate a clan snapshot
git-svn-id: http://svn.code.sf.net/p/kolmafia/code@7888 b29ace70-8910-0410-8dcc-aa2fc6433167